--- a/review/templates/review/review_list.html
+++ b/review/templates/review/review_list.html
@@ -1,30 +1,15 @@
-<html>
-	<head>
-		<title>Cine para Dummies</title>
-	</head>
-	<body>
-		<div>
-			<h1><a href="">Review</a></h1>
-		</div>
+{% extends 'review/base.html' %}
 
-		<div>
+{% block content %}
+	{% for review in reviews %}
+		<div class="reivew">
+			<div class="date">
+				{{ review.created_date }}
+			</div>
+			<h1><a href="{% url 'review.views.review_detail' pk=review.pk %}"">{{ review.film }}</a></h1>
 			<p>
-				published: 14.06.2014, 12:14
-			</p>
-			<h2><a href="">My first post</a></h2>
-			<p>
-				Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-			</p>
-		</div>
-
-		<div>
-			<p>
-				published: 14.06.2014, 12:14
-			</p>
-			<h2><a href="">My second post</a></h2>
-			<p>
-				Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.
+				{{ review.text|linebreaks }}
 			</p>
 		</div>
-	</body>
-</html>
+	{% endfor %}
+{% endblock content %}
