--- a/review/templates/review/base.html
+++ b/review/templates/review/base.html
@@ -9,7 +9,8 @@
 	</head>
 	<body>
 		<div class="page-header">
-			<h1><a href="">Review</a></h1>
+			<a href="{% url 'review.views.review_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+			<h1><a href="/">Cine Review</a></h1>
 		</div>
 
 <div class="content container">
